# church-live-audio-stream-translate

./: .gitignore  AGENTS.md  AGENT_REFERENCE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  main.js  package-lock.json  package.json  playwright.visual.config.ts  preload.js  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: distribution.yml  qa.yml  release-version.yml
docs/: DISTRIBUTION.md  OPERATOR_GUIDE.md  QA_GATE.md  README.md  SCRIPT_PREP_PROMPT.md  SETUP_AND_CONFIG.md  SIGNING.md  TEST_PLAN.md  TRANSLATION_PIPELINE.md  UI_REVIEW_RUBRIC.md
scripts/: check-signing-env.mjs  package-artifacts.mjs
scripts/lib/: check-signing-env-lib.mjs  package-artifacts-lib.mjs
src/: index.html  output.css  output.html  output.js  renderer.js  renderer.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/unit/: check-signing-env-cli.test.mjs  check-signing-env-lib.test.mjs  package-artifacts-cli.test.mjs  package-artifacts-lib.test.mjs  package-artifacts-main.test.mjs
tests/visual/: mock-tauri.ts  static-server.mjs  ui-visual.spec.ts
